--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
       <!-- section getstart -->
 
       <!-- section CARDS -->
-      <section class="cards">
+      <!-- <section class="cards">
          <div class="container">
             <div class="cards__inner">
                <ul>
@@ -49,11 +49,11 @@
                </ul>
             </div>
          </div>
-      </section>
+      </section> -->
       <!-- section CARDS -->
 
       <!-- section Practice -->
-      <section class="practice">
+      <!-- <section class="practice">
          <div class="container">
             <div class="practice__inner">
                <div class="practice__title">
@@ -124,11 +124,11 @@
                </div>
             </div>
          </div>
-      </section>
+      </section> -->
       <!-- section Practice -->
 
       <!-- section breath -->
-      <section class="breath">
+      <!-- <section class="breath">
          <div class="container">
             <div class="breath__title">
                <h3>
@@ -191,11 +191,11 @@
                <img src="./images/src/Breath/vector1.svg" alt="">
             </div>
          </div>
-      </section>
+      </section> -->
       <!-- section breath -->
 
       <!-- section meditation -->
-      <section class="meditation">
+      <!-- <section class="meditation">
          <div class="container">
             <div class="meditation__inner">
                <div class="meditation__title">
@@ -242,16 +242,16 @@
                   </ul>
                   <img src="./images/src/meditation/vector.svg" alt="">
                   <ul class="list-second">
-                     <li class="meditation__item-right">
-                        <div class="meditation__item-box-right">
+                     <li class="meditation__item">
+                        <div class="meditation__item-box">
                            <h6>Relex & Refresh</h6>
                            <p>
                               The generated Lorem Ipsum is therefore always free from repetition, injected humour.
                            </p>
                         </div>
                      </li>
-                     <li class="meditation__item-right">
-                        <div class="meditation__item-box-right">
+                     <li class="meditation__item">
+                        <div class="meditation__item-box">
                            <h6>Beauty Of Body</h6>
                            <p>
                               Various versions have evolved over the years sometimes by accident sometimes on purpose
@@ -260,8 +260,8 @@
                            </p>
                         </div>
                      </li>
-                     <li class="meditation__item-right">
-                        <div class="meditation__item-box-right">
+                     <li class="meditation__item">
+                        <div class="meditation__item-box">
                            <h6>Strees Relief</h6>
                            <p>
                               Neque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur adipisci velit.
@@ -272,11 +272,11 @@
                </div>
             </div>
          </div>
-      </section>
+      </section> -->
       <!-- section meditation -->
 
       <!-- section Transform -->
-      <section class="transform">
+      <!-- <section class="transform">
          <div class="container">
             <div class="transform__inner">
                <div class="transform__title">
@@ -325,7 +325,7 @@
                </div>
             </div>
          </div>
-      </section>
+      </section> -->
       <!-- section Transform -->
    </div>
 </div>
