--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -28,27 +28,34 @@
 		<div class="container-fluid">
 			<div class="header__fixed">
 				<div class="header__inner">
-					<img class="logo" src="../images/src/Logo.svg" alt="logo">
-					<ul>
-						<li>
-							<a class="active" href="">Home</a>
-						</li>
-						<li>
-							<a href="">Explore</a>
-						</li>
-						<li>
-							<a href="">Classes</a>
-						</li>
-						<li>
-							<a href="">About Us</a>
-						</li>
-						<li>
-							<a href="">Privacy</a>
-						</li>
-						<li>
-							<a href="">Servives</a>
-						</li>
-					</ul>
+					<a href="" class="heade__logo-link">
+						<img class="logo" src="../images/src/Logo.svg" alt="logo">
+					</a>
+					<div class="header__menu menu">
+						<div class="menu__icon">
+							<span></span>
+						</div>
+						<div class="menu__body">
+							<ul>
+								<li>
+									<a class="active" href="">Home</a>
+								</li>
+								<li>
+									<a href="">Cards</a>
+								</li>
+								<li>
+									<a href="">Practice</a>
+								</li>
+								<li>
+									<a href="">Music</a>
+								</li>
+								<li>
+									<a href="">About Us</a>
+								</li>
+							</ul>
+						</div>
+
+					</div>
 				</div>
 			</div>
 		</div>
