--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -1,7 +1,7 @@
 <script src="js/app.min.js"></script>
 
 </body>
-<footer class="footer">
+<!-- <footer class="footer">
    <div class="container">
       <div class="footer__inner">
          <img class="logo footer__logo" src="../images/src/Logo.svg" alt="logo">
@@ -50,6 +50,6 @@
          </div>
       </div>
    </div>
-</footer>
+</footer> -->
 
 </html>
