--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,8 @@
             Detoxify Your Body
          </h1>
          <p>
-            “It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout point of using Lorem Ipsum is that it has a more-or-less.”
+            Meditation can wipe away the day's stress, bringing with it inner peace. See how you can easily learn to
+            practice meditation whenever you need it most.
          </p>
          <button class="button getstart__button">Get Start </button>
          <img class="getstart__img" src="./images/src/MainTop/woman.svg" alt="">
@@ -18,42 +18,51 @@
       <!-- section getstart -->
 
       <!-- section CARDS -->
-      <!-- <section class="cards">
+      <section class="cards">
          <div class="container">
             <div class="cards__inner">
                <ul>
                   <li class="cards__item">
-                     <img class="cards__item-bg" src="./images/dist/Cards/MedB.svg" alt="">
-                     <img src="./images/src/Cards/ic_meditation.svg" alt="">
-                     <h4 class="cards__title">Meditation</h4>
-                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration in some form.</p>
+
+                     <div class="cards__item-box">
+                        <img class="cards__item-bg" src="./images/dist/Cards/MedB.svg" alt="">
+                        <img src="./images/src/Cards/ic_meditation.svg" alt="">
+                        <h4 class="cards__title">Meditation</h4>
+                        <p>Mindfulness
+                           meditation helps you focus on the present, which can improve your concentration on other
+                           tasks
+                           in daily life. </p>
+                     </div>
                      <button class="button">Learn More</button>
                   </li>
                   <li class="cards__item">
-                     <img class="cards__item-bg" src="./images/dist/Cards/YogaB.svg" alt="">
-                     <img src="./images/src/Cards/ic_yoga.svg" alt="">
-                     <h4 class="cards__title">Yoga</h4>
-                     <p> It has survived not only five centuries, but also the leap into electronic typesetting,
-                        remaining essentially unchanged.</p>
+                     <div class="cards__item-box">
+                        <img class="cards__item-bg" src="./images/dist/Cards/YogaB.svg" alt="">
+                        <img src="./images/src/Cards/ic_yoga.svg" alt="">
+                        <h4 class="cards__title">Yoga</h4>
+                        <p> Yoga offers physical and mental health benefits for people of all ages. And, if you’re going
+                           through an illness, recovering from surgery or living with a chronic condition.</p>
+                     </div>
                      <button class="button">Learn More</button>
                   </li>
                   <li class="cards__item">
-                     <img class="cards__item-bg" src="./images/dist/Cards/soundB.svg" alt="">
-                     <img src="./images/src/Cards/ic_sound.svg" alt="">
-                     <h4 class="cards__title">Sound</h4>
-                     <p> It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-                        passages, and more recently with desktop publishing.</p>
+                     <div class="cards__item-box">
+                        <img class="cards__item-bg" src="./images/dist/Cards/soundB.svg" alt="">
+                        <img src="./images/src/Cards/ic_sound.svg" alt="">
+                        <h4 class="cards__title">Sound</h4>
+                        <p>Music is an incredibly therapeutic tool for emotional health, daily performance, and sleep.
+                        </p>
+                     </div>
                      <button class="button">Learn More</button>
                   </li>
                </ul>
             </div>
          </div>
-      </section> -->
+      </section>
       <!-- section CARDS -->
 
       <!-- section Practice -->
-      <!-- <section class="practice">
+      <section class="practice">
          <div class="container">
             <div class="practice__inner">
                <div class="practice__title">
@@ -62,8 +71,8 @@
                      Want, Whenever You Need
                   </h3>
                   <p>
-                     “These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice
-                     is untrammelled and when nothing prevents our being able to do what we like best.”
+                     The meditation-and-the-brain research has been rolling in steadily for a number of years now, with
+                     new studies coming out just about every week to illustrate some new benefit of meditation.
                   </p>
                </div>
                <div class="practice__content">
@@ -124,11 +133,11 @@
                </div>
             </div>
          </div>
-      </section> -->
+      </section>
       <!-- section Practice -->
 
       <!-- section breath -->
-      <!-- <section class="breath">
+      <section class="breath">
          <div class="container">
             <div class="breath__title">
                <h3>
@@ -148,7 +157,7 @@
                         <p>Intriduction, Strees Assesment</p>
                      </div>
                      <button class="button button--play" id="startOrStop">
-                        <img class="button--play-img active" id="btnPlay" src="./images/dist/Breath/Play.svg" alt="">
+                        <img class="button--play-img " id="btnPlay" src="./images/dist/Breath/Play.svg" alt="">
                         <img class="button--pause-img " id="btnPause" src="./images/dist/Breath/pause-button.svg"
                            alt="">
                         <audio id="audio" src="./images/src/audio/forest.mp3" type="audio/mp3" controls>
@@ -164,10 +173,10 @@
                         <p>Relex Mind</p>
                      </div>
                      <button class="button button--play" id="startOrStop">
-                        <img class="button--play-img active" id="btnPlay" src="./images/dist/Breath/Play.svg" alt="">
+                        <img class="button--play-img " id="btnPlay" src="./images/dist/Breath/Play.svg" alt="">
                         <img class="button--pause-img " id="btnPause" src="./images/dist/Breath/pause-button.svg"
                            alt="">
-                        <audio id="audio" src="./images/src/audio/forest.mp3" type="audio/mp3" controls>
+                        <audio id="audio" src="./images/src/audio/nature.mp3" type="audio/mp3" controls>
                            Your browser does not support the audio element.
                         </audio>
                      </button>
@@ -179,7 +188,7 @@
                         <p>Strees Relief</p>
                      </div>
                      <button class="button button--play" id="startOrStop">
-                        <img class="button--play-img active" id="btnPlay" src="./images/dist/Breath/Play.svg" alt="">
+                        <img class="button--play-img " id="btnPlay" src="./images/dist/Breath/Play.svg" alt="">
                         <img class="button--pause-img " id="btnPause" src="./images/dist/Breath/pause-button.svg"
                            alt="">
                         <audio id="audio" src="./images/src/audio/forest.mp3" type="audio/mp3" controls>
@@ -191,11 +200,11 @@
                <img src="./images/src/Breath/vector1.svg" alt="">
             </div>
          </div>
-      </section> -->
+      </section>
       <!-- section breath -->
 
       <!-- section meditation -->
-      <!-- <section class="meditation">
+      <section class="meditation">
          <div class="container">
             <div class="meditation__inner">
                <div class="meditation__title">
@@ -242,16 +251,16 @@
                   </ul>
                   <img src="./images/src/meditation/vector.svg" alt="">
                   <ul class="list-second">
-                     <li class="meditation__item">
-                        <div class="meditation__item-box">
+                     <li class="meditation__item-right">
+                        <div class="meditation__item-box-right">
                            <h6>Relex & Refresh</h6>
                            <p>
                               The generated Lorem Ipsum is therefore always free from repetition, injected humour.
                            </p>
                         </div>
                      </li>
-                     <li class="meditation__item">
-                        <div class="meditation__item-box">
+                     <li class="meditation__item-right">
+                        <div class="meditation__item-box-right">
                            <h6>Beauty Of Body</h6>
                            <p>
                               Various versions have evolved over the years sometimes by accident sometimes on purpose
@@ -260,8 +269,8 @@
                            </p>
                         </div>
                      </li>
-                     <li class="meditation__item">
-                        <div class="meditation__item-box">
+                     <li class="meditation__item-right">
+                        <div class="meditation__item-box-right">
                            <h6>Strees Relief</h6>
                            <p>
                               Neque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur adipisci velit.
@@ -272,11 +281,11 @@
                </div>
             </div>
          </div>
-      </section> -->
+      </section>
       <!-- section meditation -->
 
       <!-- section Transform -->
-      <!-- <section class="transform">
+      <section class="transform">
          <div class="container">
             <div class="transform__inner">
                <div class="transform__title">
@@ -325,7 +334,7 @@
                </div>
             </div>
          </div>
-      </section> -->
+      </section>
       <!-- section Transform -->
    </div>
 </div>
