--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -38,19 +38,22 @@
 						<div class="menu__body">
 							<ul>
 								<li>
-									<a class="active" href="">Home</a>
+									<a class="active menu__link" data-goto=".getstart" href="#">Home</a>
 								</li>
 								<li>
-									<a href="">Cards</a>
+									<a class="menu__link" data-goto=".cards" href="#">Cards</a>
 								</li>
 								<li>
-									<a href="">Practice</a>
+									<a class="menu__link" data-goto=".practice" href="#">Practice</a>
 								</li>
 								<li>
-									<a href="">Music</a>
+									<a class="menu__link" data-goto=".breath" href="#">Music</a>
 								</li>
 								<li>
-									<a href="">About Us</a>
+									<a class="menu__link" data-goto=".meditation" href="#">Servives</a>
+								</li>
+								<li>
+									<a class="menu__link" data-goto=".transform" href="#">About Us</a>
 								</li>
 							</ul>
 						</div>
