--- a/app/index.html
+++ b/app/index.html
@@ -197,14 +197,14 @@
                      </button>
                   </li>
                </ul>
-               <img src="./images/src/Breath/vector1.svg" alt="">
+               <img class="breath__img" src="./images/src/Breath/vector1.svg" alt="">
             </div>
          </div>
       </section>
       <!-- section breath -->
 
       <!-- section meditation -->
-      <section class="meditation">
+      <!-- <section class="meditation">
          <div class="container">
             <div class="meditation__inner">
                <div class="meditation__title">
@@ -281,11 +281,11 @@
                </div>
             </div>
          </div>
-      </section>
+      </section> -->
       <!-- section meditation -->
 
       <!-- section Transform -->
-      <section class="transform">
+      <!-- <section class="transform">
          <div class="container">
             <div class="transform__inner">
                <div class="transform__title">
@@ -334,7 +334,7 @@
                </div>
             </div>
          </div>
-      </section>
+      </section> -->
       <!-- section Transform -->
 
       <!-- popup -->
