--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -25,7 +25,7 @@
 <body>
 
 	<header class="header">
-		<div class="container-fluid">
+		<div class="container">
 			<div class="header__fixed">
 				<div class="header__inner">
 					<a href="" class="heade__logo-link">
