--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!--#set var="title" value="OptimizedHTML 5" -->
+<!--#set var="title" value="Meditation" -->
 <!--#include virtual="/parts/header.html" -->
 <div class="wrapper">
    <div class="main">
