--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -12,7 +12,7 @@
 	<meta name="description" content="Startup HTML template OptimizedHTML 5">
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="icon" href="images/favicon.png">
+	<link rel="icon" href="images/src/Logo.svg">
 	<meta property="og:image" content="images/dist/preview.jpg">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
