--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -4,7 +4,7 @@
 <footer class="footer">
    <div class="container">
       <div class="footer__inner">
-         <img class="logo footer__logo" src="../images/dist/Logo.svg" alt="logo">
+         <img class="logo footer__logo" src="./images/dist/Logo.svg" alt="logo">
          <ul>
             <li>
                <a class="active" href="">Home</a>
