--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -12,7 +12,7 @@
 	<meta name="description" content="Startup HTML template OptimizedHTML 5">
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="icon" href="../images/dist/Logo.svg">
+	<link rel="icon" href="./images/dist/Logo.svg">
 	<meta property="og:image" content="images/dist/preview.jpg">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
 			<div class="header__fixed">
 				<div class="header__inner">
 					<a href="" class="heade__logo-link">
-						<img class="logo" src="../images/dist/Logo.svg" alt="logo">
+						<img class="logo" src="./images/dist/Logo.svg" alt="logo">
 					</a>
 					<div class="header__menu menu">
 						<div class="menu__icon">
